--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,9 +1,15 @@
 .home{
   background-color: #002245;
   width: 100%;
-  height: 680px;
+  min-height: 82vh;
   color: #fff;
   padding: 40px 30px;
+}
+
+@media only screen and (min-height: 830px){
+  .home{
+    min-height: 682px;
+  }
 }
 
 .welcome{
