update and insert file transferList dan daftarAnarBank

--- a/frontend/src/components/Topbar.css
+++ b/frontend/src/components/Topbar.css
@@ -37,3 +37,10 @@
 .topbar .online{
   background-color: #93D72C;
 }
+
+.logout-none{
+  visibility: hidden;
+}
+.logout{
+  visibility: visible;
+}
