--- a/frontend/src/pages/Transfer/TransferList.css
+++ b/frontend/src/pages/Transfer/TransferList.css
@@ -1,4 +1,4 @@
-.m-info{
+.m-transfer{
   background-color: #002245;
   width: 100%;
   min-height: 82vh;
@@ -7,20 +7,20 @@
 }
 
 @media only screen and (min-height: 830px){
-  .m-info{
+  .m-transfer{
     min-height: 682px;
   }
 }
 
-.card-info{
+.card-transfer{
   max-width: 325px;
-  min-height: 157px;
+  min-height: 270px;
   background-color: #F8F8F8;
   border-radius: 5px;
   overflow: hidden;
 }
 
-.header-info{
+.header-transfer{
   width: 100%;
   height: 69px;
   background-color: #E0E0E0;
@@ -30,23 +30,23 @@
   align-items: center;
 }
 
-.header-info > img{
+.header-transfer > img{
   width: 48px;
 }
-.header-info > p{
+.header-transfer > p{
   color: #085192;
   font-weight: 700;
   font-size: 16px;
 }
 
-.menu-info{
+.menu-transfer{
   width: 100%;
   height: max-content;
   display: flex;
   flex-direction: column;
 }
 
-.list-info{
+.list-transfer{
   width: 100%;
   height: 34px;
   align-items: center;
@@ -58,46 +58,30 @@
   transition: .3s;
 }
 
-.list-info:hover{
+.list-transfer:hover{
   border-bottom: 1px solid #c0c0c0;
   transition: .3s;
 }
 
-.list-info > p{
+.list-transfer > p{
   color: #015A9E;
   font-size: 13px;
   font-weight: 400;
 }
-.list-info > svg{
+.list-transfer > svg{
   color: #0284C1;
   font-size: 10px;
 }
 
-.card-popup > div > .time-saldo{
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  margin-bottom: 20px;
+.label-list-transfer{
+  background-color: #535353;
+  width: 100%;
+  height: 21px;
+  padding: 4px 9px;
 }
 
-.card-popup > div > .time-saldo > p{
-  font-size: 13px;
-  color: #000;
-  letter-spacing: 0.1mm;
-  font-weight: 500;
-}
-
-.card-popup > div > .info-saldo{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 15px;
-  margin-bottom: 100px;
-}
-
-.card-popup > div > .info-saldo > p{
-  font-size: 13px;
-  color: #000;
-  letter-spacing: 0.05mm;
-  font-weight: 500;
+.label-list-transfer > p{
+  color: #F8F8F8;
+  font-size: 12px;
+  font-weight: 300;
 }
