--- a/frontend/src/pages/DaftarAntarBank/DaftarAntarBank.css
+++ b/frontend/src/pages/DaftarAntarBank/DaftarAntarBank.css
@@ -73,3 +73,59 @@
 .topbar-send .send:active{
   box-shadow: 1px 1px 2px #00000045;
 }
+
+
+.card-daftarAntarBank{
+  max-width: 309px;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid #ADADAD;
+}
+
+.input-daftarAntarBank{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  background-color: #F8F8F8;
+  border-bottom: 1px solid #ADADAD;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.input-daftarAntarBank > div{
+  width: 100%;
+  height: 100%;
+}
+
+.input-daftarAntarBank > div > p{
+  font-size: 12px;
+  font-weight: 500px;
+  color: #015A9E;
+}
+
+.input-daftarAntarBank > div > select,
+.input-daftarAntarBank > div > input{
+  width: 90%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  appearance: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+*::-webkit-outer-spin-button,
+*::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.input-daftarAntarBank > div > select{
+  color: #000;
+  cursor: pointer;
+}
+
+.input-daftarAntarBank > div > input::placeholder{
+  opacity: 0.7;
+}
