--- a/frontend/src/pages/DantarRekening/DaftarRekening.css
+++ b/frontend/src/pages/DantarRekening/DaftarRekening.css
@@ -121,3 +121,61 @@
   opacity: 0.7;
   font-weight: 400;
 }
+
+.box-validasiRekening{
+  max-width: 309px;
+  height: max-content;
+}
+
+.card-listRekening{
+  display: flex;
+  justify-content: space-between;
+  background-color: #F8F8F8;
+  padding: 8px 10px;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  border: 2px solid #ADADAD;
+  color: #9A9A9A;
+  margin-bottom: 5px;
+}
+
+.card-listRekening > div {
+  font-size: 13px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.card-listRekening > div > p:nth-child(1){
+  font-size: 14px;
+  font-weight: 600;
+  color: #065CAA;
+}
+
+.submitRekening{
+  position: relative;
+}
+
+.submitRekening::before{
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border: 2px solid #015A9E;
+  box-sizing: border-box;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  transition: .3s all ease;
+}
+
+.submitRekening:checked::before{
+  background-image: url("../../assets/Svg/cekbox.svg");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  border: none;
+  visibility: visible;
+}
