--- a/frontend/src/pages/Info/Info.css
+++ b/frontend/src/pages/Info/Info.css
@@ -73,6 +73,10 @@
   font-size: 10px;
 }
 
+.card-popup > div{
+  margin-top: 20px;
+}
+
 .card-popup > div > .time-saldo{
   display: flex;
   flex-direction: column;
@@ -91,7 +95,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 10px;
   margin-bottom: 100px;
 }
 
