--- a/frontend/src/pages/TransferAntarBank/TransferAntarBank.css
+++ b/frontend/src/pages/TransferAntarBank/TransferAntarBank.css
@@ -1,3 +1,4 @@
+.pilihLayanan,
 .formTransferBank{
   background-color: #bebebe;
   width: 100%;
@@ -7,6 +8,7 @@
 }
 
 @media only screen and (min-height: 830px){
+  .pilihLayanan,
   .formTransferBank{
     min-height: 682px;
   }
@@ -53,3 +55,95 @@
 .card-form > .input{
   cursor: pointer;
 }
+
+.card-listOption {
+  position: relative;
+  width: 222px;
+  max-height: 300px;
+  overflow-x: auto;
+  background-color: #000;
+  border: 0.5px solid #D4D4D4;
+  box-shadow: 0 4px 4px #00000040;
+  margin: 100px auto;
+}
+
+.card-listOption::-webkit-scrollbar {
+  width: 3px;
+}
+.card-listOption::-webkit-scrollbar-track {
+  background: transparent;
+  width: 3px;
+}
+.card-listOption::-webkit-scrollbar-thumb {
+  background: #a7a6a6;
+  border-radius: 50px;
+}
+.card-listOption::-webkit-scrollbar-thumb:hover {
+  background: #717171;
+}
+
+.card-listOption > div {
+  box-sizing: border-box;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.card-listOption > div:hover{
+  border: .5px solid #ffffff40;
+}
+
+.pilihLayanan{
+  background-color: #fff;
+}
+
+.pilihLayanan > p{
+  color: #015EAB;
+  font-size: 14;
+  font-weight: 500;
+}
+
+.card-layanan {
+  max-width: 309px;
+  height: max-content;
+  border-radius: 8px;
+  border: 1px solid #cbcbcb;
+  padding: 15px;
+  margin-top: 17px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.card-layanan > p{
+  color: #015EAB;
+  font-size: 13;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.info-layanan {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.info-layanan > div{
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.info-layanan > div:nth-child(1) > p{
+  color: #797979;
+  font-size: 12px;
+  font-weight: 500;
+}
+.info-layanan > div:nth-child(2) > p{
+  color: #015A9E;
+  font-size: 12px;
+  font-weight: 400;
+}
+
