--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -116,6 +116,8 @@ html,body{
   padding: 15px;
   border-radius: 2px;
   position: relative;
+  top: 18vh;
+  margin: auto;
 }
 
 .popup-error > .card-popup{
@@ -142,15 +144,8 @@ html,body{
   opacity: 0.7;
 }
 
-
 .action{
   width: 100%;
   display: flex;
   justify-content: space-around;
-}
-
-.card-popup{
-  position: relative;
-  top: 200px;
-  margin: auto;
 }
