--- a/frontend/src/pages/TransferAntarBank/TransferAntarBank.css
+++ b/frontend/src/pages/TransferAntarBank/TransferAntarBank.css
@@ -60,7 +60,8 @@
   position: relative;
   width: 222px;
   max-height: 300px;
-  overflow-x: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   background-color: #000;
   border: 0.5px solid #D4D4D4;
   box-shadow: 0 4px 4px #00000040;
@@ -93,7 +94,8 @@
 }
 
 .card-listOption > div:hover{
-  border: .5px solid #ffffff40;
+  background-color: #FEB81A;
+  color: #000;
 }
 
 .pilihLayanan{
@@ -115,6 +117,12 @@
   margin-top: 17px;
   background-color: #fff;
   cursor: pointer;
+  transition: .3s;
+}
+
+.card-layanan:hover{
+  box-shadow: 2px 2px 4px #00000040;
+  transition: .3s;
 }
 
 .card-layanan > p{
